crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__module_alias.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            pad
            incr
            pad
            push(2)
            pad
        end
        external.0xcee43ad7e16c078f842973701c768109786805e4f2f0e0326c9cf5b8187926b4
    end
end
