crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_one_import_and_hex_call.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x844e5f5c465f837eaa0951caf471fa86508b740e0fa759ae97bfcea9ca5c7bd3
        end
        call.0x20234ee941e53a15886e733cc8e041198c6e90d2a16ea18ce1030e8c3596dd38
    end
end
