crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_reexported_custom_alias_in_same_library.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x881ada1004e7146b8fa0f179772b86c18b40cc6c2b5c7a68908c970a4f4ef3a6
        end
        external.0xe4fc001d0ccf5fa121036acb5b8a2d3360ec6445d1c798a2bdb784587d5f9aae
    end
end
