crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_reexported_proc_in_another_library.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x7a1db797a967418e3a05de82d9d3511360352fee075e4c1ccb52e55097a88e3e
        end
        external.0xa81af55c0b7b459cfc35165cc2a3652bd33e3c0f950f9ec80805913cbd91241f
    end
end
