crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_reexported_proc_in_same_library.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0xf393d3cb30b4e902480627b3fc54a5676621c796332b28634f5dc350e6b6cc4f
        end
        external.0x41cdbde8b3bc2e1430ac2ac7d3f2d553d02216a87db1fe56c26e30718694f822
    end
end
